--- a/Listes/Menus.xaml
+++ b/Listes/Menus.xaml
@@ -28,7 +28,7 @@
                     <ColumnDefinition Width="0.1*"/>
                 </Grid.ColumnDefinitions>
 
-                <DataGrid x:Name="dgMenus" Grid.Column="1" CanUserAddRows="False" AutoGenerateColumns="False">
+                <DataGrid x:Name="dgMenus" Grid.Column="1" CanUserAddRows="False" AutoGenerateColumns="False" CellStyle="{DynamicResource SelectedBackground}">
                     <DataGrid.Columns>
                         <DataGridTextColumn Header="Date" Binding="{Binding DateMenu}" Width="1*"/>
                         <DataGridTextColumn Header="Menu du jour" Binding="{Binding LibelleMenu}" Width="1.5*"/>
