--- a/Formulaires/ReservationsForm.xaml
+++ b/Formulaires/ReservationsForm.xaml
@@ -56,7 +56,7 @@
                         <ColumnDefinition Width="1*"/>
                     </Grid.ColumnDefinitions>
 
-                    <DataGrid x:Name="dgEleve" Grid.Row="2" CanUserAddRows="False" AutoGenerateColumns="False">
+                    <DataGrid x:Name="dgEleve" Grid.Row="2" CanUserAddRows="False" AutoGenerateColumns="False" CellStyle="{DynamicResource SelectedBackground}">
                         <DataGrid.Columns>
                             <DataGridTextColumn Header="Nom de l'élève" Binding="{Binding NomEleve}" Width="1*"/>
                             <DataGridTextColumn Header="Prenom de l'élève" Binding="{Binding PrenomEleve}" Width="1*"/>
