--- a/Listes/Reservations.xaml
+++ b/Listes/Reservations.xaml
@@ -29,7 +29,7 @@
                     <ColumnDefinition Width="0.1*"/>
                 </Grid.ColumnDefinitions>
 
-                <DataGrid x:Name="dg" Grid.Column="1" CanUserAddRows="False" AutoGenerateColumns="False">
+                <DataGrid x:Name="dg" Grid.Column="1" CanUserAddRows="False" AutoGenerateColumns="False" CellStyle="{DynamicResource SelectedBackground}">
                     <DataGrid.Columns>
                         <DataGridTextColumn Header="Date" Binding="{Binding DateReservation}" Width="1*"/>
                         <DataGridTextColumn Header="Nom de l'élève" Binding="{Binding NomEleve}" Width="1.5*"/>
